--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ footer{margin-top:14px;font-size:0.8rem;color:#9ca3af}
 <body>
 <main class="card" role="main">
 <!-- IMAGE : remplace photo.jpg par le nom de ton image si besoin -->
-<img src="photo.jpg" alt="Photo de Prénom Nom" class="avatar">
+<img src="photo_profil.jpeg" alt="Photo de Alexis Raphin" class="avatar">
 
 
 <!-- NOM ET TITRE : remplace par tes infos -->
